# uchardet

./: meson.build  meson_options.txt
src/: meson.build
